--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="wrapper">
         <div class="header">
+            <div class="header__opening-bg"></div>
             <div class="container">
                 <div class="header__opening">
                     <div class="openning-hours">Opening Hours: 06:00 to 20:00</div>
@@ -62,7 +63,20 @@
                     <div class="nav__btn btn">Have Any Questions?</div>
                 </div>
             </div>
-            <div class="header__content"></div>
+            <div class="header__content">
+                <div class="container">
+                    <div class="content__item">
+                        <div class="customer">
+                            <img src="img/header/gear.svg" alt="">
+                            <div class="customer__text">Improve our customers’ lives by providing effective solutions.</div>
+                        </div>
+                        <div class="header__tittel">
+                            <h1>A recognized leader in services industry</h1>
+                        </div>
+                        <div class="header__btn btn">View Services</div>
+                    </div>    
+                </div>
+            </div>
         </div>
         <div class="main"></div>
         <div class="footer"></div>
