Add section Welcom

--- a/index.html
+++ b/index.html
@@ -78,7 +78,43 @@
                 </div>
             </div>
         </div>
-        <div class="main"></div>
+        <div class="main">
+            <section class="welcome">
+                <div class="container">
+                    <div class="welcome__row">    
+                        <div class="welcome__img">
+                            <img src="img/Welcome/welcome.jpg" alt="">
+                        </div>
+                        <div class="welcome__content">
+                            <div class="icon__row">
+                                <img src="img/Welcome/icon.svg" class="content__icon" alt="">
+                                <div class="icon__text">Welcome BlueCollar</div>
+                            </div>
+                            <div class="conntent__tittel tittel">
+                                <h2>We Provide Your Future</h2>
+                            </div>
+                            <div class="content__text">
+                                <p>Bluecollar Electrical services was established in 2008. We are trusted and reliable electricians who serve customers in the city as well as throughout United States Of America.</p>
+                                <p>We have extensive experience of domestic and business electrical installations and no job is too small. Our customers value our professionalism, work ethic and our competitive prices.</p>
+                            </div>
+                            <div class="content__experience">
+                                <div class="experience__block">
+                                    <div class="experience__number">35</div>
+                                    <div class="experience__text">Years Of Experience</div>
+                                </div>
+                                <ul class="experience__list">
+                                    <li class="experience__item">For all your system requirements</li>
+                                    <li class="experience__item">All work undertaken by qualified</li>
+                                    <li class="experience__item">Experienced office staff on hand</li>
+                                    <li class="experience__item">A Full Guarantee On Workmanship</li>
+                                    <li class="experience__item">Properties at a reasonable price.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
         <div class="footer"></div>
     </div>
     <script src="js/script.js"></script>
