--- a/index.html
+++ b/index.html
@@ -296,6 +296,51 @@
                     </div>
                 
             </section>
+            <section class="gallery">
+                <div class="container__gallery">
+                    <div class="gallery__block">
+                        <div class="icon__block">
+                            <div class="icon__row icon__row-gray">
+                                <img src="img/gallery/icon.svg" class="content__icon" alt="">
+                                <div class="icon__text">The Gallery</div>
+                            </div>
+                        </div>
+                        <div class="gallery__titel titel">
+                            <h2>Our Recent Projects</h2>
+                        </div>
+                        <div class="gallery__cards">
+                            <div class="gallery__card">
+                                <div class="gallery__card__img">
+                                    <img src="img/gallery/commercial.jpg" alt="">
+                                </div>
+                                <div class="gallery__card__titel">Fiber cable change</div>
+                                <div class="gallery__card__subtitel">Commercial</div>
+                            </div>
+                            <div class="gallery__card">
+                                <div class="gallery__card__img">
+                                    <img src="img/gallery/industry.jpg" alt="">
+                                </div>
+                                <div class="gallery__card__titel">Industry machine issue</div>
+                                <div class="gallery__card__subtitel">Industry</div>
+                            </div>
+                            <div class="gallery__card">
+                                <div class="gallery__card__img">
+                                    <img src="img/gallery/residential.jpg" alt="">
+                                </div>
+                                <div class="gallery__card__titel">Wheel Alloy Change</div>
+                                <div class="gallery__card__subtitel">Residential</div>
+                            </div>
+                            <div class="gallery__card">
+                                <div class="gallery__card__img">
+                                    <img src="img/gallery/commercial2.jpg" alt="">
+                                </div>
+                                <div class="gallery__card__titel">Roof Cleaning</div>
+                                <div class="gallery__card__subtitel">Commercial</div>
+                            </div>
+                        </div>
+                    </div>    
+                </div>
+            </section>
         </div>
         <footer class="footer"></footer>
     </div>
