--- a/index.html
+++ b/index.html
@@ -433,8 +433,83 @@
             </section>
             <section class="prices">
                 <div class="container">
+                    <div class="icon__block">
+                        <div class="icon__row icon__row-white">
+                            <img src="img/price/icon.svg" class="content__icon" alt="">
+                            <div class="icon__text">Price Plan</div>
+                        </div>
+                    </div>
                     <div class="price__header">
-                        
+                        <div class="price__titel titel">
+                            <h2>Let’s Customize Work With Affordable Price</h2>
+                        </div>
+                        <div class="price__text">This is passionate about delivering growth and the new possibilities in the field of electrical services. We have extensive experience of domestic and business electrical installations and no job is too small.</div>
+                    </div>
+                    <div class="price__cards">
+                        <div class="price__card">
+                            <div class="price__card__titel">Basic Plan</div>
+                            <div class="price__block">
+                                <div class="price__cost">$ 599.00</div>
+                                <div class="price__visit">Per Visit Charge</div>
+                            </div>
+                            <div class="line"></div>
+                            <ul class="price__items">
+                                <li class="price__item">Electrical Service</li>
+                                <li class="price__item">Distribution Power Systemss</li>
+                                <li class="price__item">High & Medium Voltages</li>
+                                <li class="price__item">Industrial Control Systems</li>
+                                <li class="price__item">Switch Installation</li>
+                                <li class="price__item">Generator Installations</li>
+                                <li class="price__item">Innovative Construction</li>
+                            </ul>
+                            <div class="price__btn">Buy Now</div>
+                        </div>
+                        <div class="price__card">
+                            <div class="price__card__titel">Standard</div>
+                            <div class="price__block">
+                                <div class="price__cost">$ 699.00</div>
+                                <div class="price__visit">Per Visit Charge</div>
+                            </div>
+                            <div class="line"></div>
+                            <ul class="price__items">
+                                <li class="price__item">PLC Controls</li>
+                                <li class="price__item">Conveyor systems</li>
+                                <li class="price__item">Wiring renovations</li>
+                                <li class="price__item">Electric Water Heater Repair</li>
+                                <li class="price__item">Service And Panel Upgrades</li>
+                                <li class="price__item">Efficient Lighting Solutions</li>
+                                <li class="price__item">Site lighting</li>
+                            </ul>
+                            <div class="price__btn">Buy Now</div>
+                        </div>
+                        <div class="price__card">
+                            <div class="price__card__titel">Professional</div>
+                            <div class="price__block">
+                                <div class="price__cost">$ 799.00</div>
+                                <div class="price__visit">Per Visit Charge</div>
+                            </div>
+                            <div class="line"></div>
+                            <ul class="price__items">
+                                <li class="price__item">Cable Tray Installations</li>
+                                <li class="price__item">Wiring Upgrades</li>
+                                <li class="price__item">Energy Efficient Lighting</li>
+                                <li class="price__item">Emergency Generating</li>
+                                <li class="price__item">Pools And Hot Tubs</li>
+                                <li class="price__item">Air Conditioning Units</li>
+                                <li class="price__item">Generating Systems</li>
+                            </ul>
+                            <div class="price__btn">Buy Now</div>
+                        </div>
+                    </div>
+                    <div class="price__extra">
+                        <div class="extra__block">
+                            <div class="extra__titel">Affordable Price</div>
+                            <div class="extra__text">We adhere strictly to the current National Electrical Code, and we conduct regular in-house sessions with our technicians to review any code changes and applications.</div>
+                        </div>   
+                        <div class="extra__block">
+                            <div class="extra__titel">Fixed Plan</div>
+                            <div class="extra__text">We understand fully that your time is of extreme value. You will never have to worry about waiting around for our trained technicians.24/7 Service Providers Affordable Price.</div>
+                        </div>  
                     </div>
                 </div>
             </section>
